stable -- working countdown timer. alert on game end

--- a/index.html
+++ b/index.html
@@ -1,12 +1,62 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Assign 05</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-  </head>
-  <body>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>Assign 05</title>
+  <link rel="stylesheet" href="assets/css/reset.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <script type="text/javascript" src="assets/javascript/script.js">
+
+  </script>
+</head>
+
+<body>
+  <main>
+    <h1 class="heading">Totally Trivial Trivia!!</h1>
+    <p class="timer">Time Remaining: 60 seconds</p>
+
+    <section class="questionBody">
+      <div class="asdasd">
+        <p>
+          question: asjkdbkajsdkjasb
+        </p>
+        <p>
+          <input type="radio" name="a" value="A">
+          A
+        </p>
+        <p>
+          <input type="radio" name="a" value="A">
+          A
+        </p>
+        <p>
+          <input type="radio" name="a" value="A">
+          A
+        </p>
+
+      </div>
+
+      <div class="questionBody">
+        <p>
+          question: asjkdbkajsdkjasb
+        </p>
+        <p>
+          <input type="radio" name="b" value="A">
+          A
+        </p>
+        <p>
+          <input type="radio" name="b" value="A">
+          A
+        </p>
+        <p>
+          <input type="radio" name="b" value="A">
+          A
+        </p>
+
+      </div>
+    </section>
+
+  </main>
+</body>
+
 </html>
