stable - Dynamic question generation through the DOM

--- a/index.html
+++ b/index.html
@@ -15,45 +15,9 @@
   <main>
     <h1 class="heading">Totally Trivial Trivia!!</h1>
     <p class="timer">Time Remaining: 60 seconds</p>
-
+    
     <section class="questionBody">
-      <div class="asdasd">
-        <p>
-          question: asjkdbkajsdkjasb
-        </p>
-        <p>
-          <input type="radio" name="a" value="A">
-          A
-        </p>
-        <p>
-          <input type="radio" name="a" value="A">
-          A
-        </p>
-        <p>
-          <input type="radio" name="a" value="A">
-          A
-        </p>
-
-      </div>
-
-      <div class="questionBody">
-        <p>
-          question: asjkdbkajsdkjasb
-        </p>
-        <p>
-          <input type="radio" name="b" value="A">
-          A
-        </p>
-        <p>
-          <input type="radio" name="b" value="A">
-          A
-        </p>
-        <p>
-          <input type="radio" name="b" value="A">
-          A
-        </p>
-
-      </div>
+      <!-- Questions are dynamically created in the javascript file -->
     </section>
 
   </main>
