stable -- styling added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Assign 05</title>
   <link rel="stylesheet" href="assets/css/reset.css">
   <link rel="stylesheet" href="assets/css/style.css">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Farro|Open+Sans&display=swap" rel="stylesheet">
+
   <script type="text/javascript" src="assets/javascript/script.js">
 
   </script>
@@ -15,7 +18,7 @@
   <main>
     <h1 class="heading">Totally Trivial Trivia!!</h1>
     <p class="timer">Time Remaining: 60 seconds</p>
-    
+
     <section class="questionBody">
       <!-- Questions are dynamically created in the javascript file -->
     </section>
